examples/diagnostics/expected/1260-diagnostics-context-extend-collision.stderr
error: duplicate context field 'tracer': the Context namespace is program-global and flat — every field name must be declared exactly once
  --> examples/diagnostics/1260-diagnostics-context-extend-collision/lib.sx:4:1
   |
 4 | #context_extend tracer: i64 = 7;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: 'tracer' first declared here, by examples/diagnostics/1260-diagnostics-context-extend-collision.sx
  --> examples/diagnostics/1260-diagnostics-context-extend-collision.sx:9:1
   |
 9 | #context_extend tracer: i64 = 1;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
